added new pages

--- a/src/pages/anniversary/anniversary.html
+++ b/src/pages/anniversary/anniversary.html
@@ -12,12 +12,15 @@
 
 <ion-content padding>
     <ion-list>
-        <ion-item *ngFor="let item of anniversaryList ">
-          <ion-avatar item-start>
-            <img src={{item.img}}>
-          </ion-avatar>
-          <h2>{{item.name | titlecase}}</h2>
-          <p>{{item.dob}}</p>
+        <ion-item *ngFor="let item of anniversaryList">
+            <ion-avatar item-start>
+                <img style="float: left" src={{item.img}}>
+                <div style="float: right;margin-left: 20px">
+                    <h2 >{{item.name | titlecase}}</h2>
+                    <p>{{item.dob}}</p>
+                </div>
+              </ion-avatar>
+              <ion-checkbox item-right>  </ion-checkbox>
         </ion-item>
       </ion-list>
 
