--- a/src/pages/feedback/feedback.html
+++ b/src/pages/feedback/feedback.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>Feedback</ion-title>
+    <ion-title>Add Lead</ion-title>
   </ion-navbar>
 </ion-header>
 
