--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -91,7 +91,7 @@
             </ion-item>
             <ion-item >
                 <ion-label>
-                   <strong>Deals</strong>
+                   <strong>Package Deals</strong>
                 </ion-label>
                 <ion-note  item-right>20</ion-note>
               </ion-item>
@@ -122,12 +122,12 @@
             </ion-label>
             <ion-note  item-right>300</ion-note>
           </ion-item>
-          <ion-item style="border-bottom: none">
+          <!-- <ion-item style="border-bottom: none">
             <ion-label>
                <strong>Load</strong> 
             </ion-label>
             <ion-note  item-right>30</ion-note>
-          </ion-item>
+          </ion-item> -->
 
         </ion-col>
         <ion-col style="text-align:  -webkit-center;margin-top: 15px;" col-4>
@@ -302,11 +302,14 @@
       </ion-row>
     </ion-card>
   </div>
-
+  <div style="text-align: center">
+      <p class="title" style=" font-size: 12px; width: 100%; margin-left: 0px; color: #34495E;">© 2018 Invoay Software All
+          Rights Reserved</p>
+  </div>
+ 
 
 
 </ion-content>
-<ion-footer style="text-align: center">
-  <p class="title" style=" font-size: 12px; width: 100%; margin-left: 0px; color: #34495E;">© 2018 Invoay Software All
-    Rights Reserved</p>
-</ion-footer>
+<!-- <ion-footer style="text-align: center">
+ 
+</ion-footer> -->
