--- a/src/pages/birthday/birthday.html
+++ b/src/pages/birthday/birthday.html
@@ -11,15 +11,16 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-list>
-        <ion-item *ngFor="let item of birthdayList ">
-          <ion-avatar item-start>
-            <img src={{item.img}}>
-          </ion-avatar>
-          <h2>{{item.name | titlecase}}</h2>
-          <p>{{item.dob}}</p>
+        <ion-item *ngFor="let item of birthdayList">
+            <ion-avatar item-start>
+                <img style="float: left" src={{item.img}}>
+                <div style="float: right;margin-left: 20px">
+                    <h2 >{{item.name | titlecase}}</h2>
+                    <p>{{item.dob}}</p>
+                </div>
+              </ion-avatar>
+              <ion-checkbox item-right  >  </ion-checkbox>
         </ion-item>
-      </ion-list>
 
 </ion-content>
 <ion-footer style="text-align: center">
