--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -122,15 +122,27 @@
             </ion-label>
             <ion-note  item-right>300</ion-note>
           </ion-item>
-          <!-- <ion-item style="border-bottom: none">
+          <ion-item style="border-bottom: none;text-align: center">
             <ion-label>
-               <strong>Load</strong> 
+               <strong>Membership Wallet</strong> 
+            </ion-label>
+            <!-- <ion-note  item-right>30</ion-note> -->
+          </ion-item>
+          <ion-item >
+            <ion-label>
+               <strong>Load Amount</strong> 
+            </ion-label>
+            <ion-note  item-right>300</ion-note>
+          </ion-item>
+          <ion-item style="border-bottom: none">
+            <ion-label>
+               <strong>Sale Amount</strong> 
             </ion-label>
             <ion-note  item-right>30</ion-note>
-          </ion-item> -->
+          </ion-item>
 
         </ion-col>
-        <ion-col style="text-align:  -webkit-center;margin-top: 15px;" col-4>
+        <ion-col style="text-align:  -webkit-center;margin-top: 50px;" col-4>
           <img style="width: 50%" src="assets/icon/wallet1.svg" alt="">
         </ion-col>
       </ion-row>
@@ -302,8 +314,37 @@
       </ion-row>
     </ion-card>
   </div>
+
+  <div class="feedback">
+    <ion-card style="background: linear-gradient(to right, #D7BDE2  , #9B59B6);color: white;    min-height: 130px;">
+      <ion-card-header class="header" style="text-align: center;;color: white">
+        <span style="text-align: center"><strong>Loyalty Points</strong> </span>
+      </ion-card-header>
+      <ion-row>
+        <ion-col style="text-align: center;" col-8>
+          <ion-item >
+            <ion-label>
+               <strong> Earn  points </strong>
+            </ion-label>
+            <ion-note  item-right>18</ion-note>
+          </ion-item>
+          <ion-item style="border-bottom: none">
+            <ion-label>
+               <strong>Redeem points</strong> 
+            </ion-label>
+            <ion-note  item-right>20</ion-note>
+          </ion-item>
+
+
+        </ion-col>
+        <ion-col style="text-align:  -webkit-center;margin-top: 15px;" col-4>
+          <img style="width: 50%" src="assets/icon/loyalty-card.svg" alt="">
+        </ion-col>
+      </ion-row>
+    </ion-card>
+  </div>
   <div style="text-align: center">
-      <p class="title" style=" font-size: 12px; width: 100%; margin-left: 0px; color: #34495E;">© 2018 Invoay Software All
+      <p class="title" style=" font-size: 12px; width: 100%; margin-left: 0px; color: #34495E;">© 2019 Invoay Software All
           Rights Reserved</p>
   </div>
  
