--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
