--- a/src/pages/birthday/birthday.html
+++ b/src/pages/birthday/birthday.html
@@ -4,13 +4,31 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
-    <ion-title>Birthday</ion-title>
+    <ion-title></ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content padding>
+<ion-content>
+
+    <div   style="height: 190px;background-image: url('assets/imgs/bg.jpg');background-repeat: no-repeat;background-size:cover;">
+      <div  style="background-color: rgba(0, 0, 0, 0.3);    height: -webkit-fill-available;"> 
+        <ion-navbar>
+            <ion-item class="item-background-color">
+                <ion-label style="color: #fff;
+                  font-size: 17px;">Birthday</ion-label>
+                <ion-select interface="popover" [(ngModel)]="warehouseId" placeholder="Store">
+                  <ion-option *ngFor="let item of store" value="{{item.id}}">{{item.name}}</ion-option>
+                </ion-select>
+              </ion-item>
+          </ion-navbar>
+
+
+    </div>
+    </div>
+    <div class="main-content" style="background: white;margin-top: -10px;border-top-left-radius: 15px;border-top-right-radius: 15px;height: -webkit-fill-available">
+        <div style="padding-top: 15px">
         <ion-item *ngFor="let item of birthdayList">
             <ion-avatar item-start>
                 <img style="float: left" src={{item.img}}>
@@ -21,7 +39,8 @@
               </ion-avatar>
               <ion-checkbox item-right  >  </ion-checkbox>
         </ion-item>
-
+</div>
+</div>
 </ion-content>
 <ion-footer style="text-align: center">
     <button ion-button full (click)="sendWishes()">Send Wishes</button>
