--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-item class="item-background-color">
       <ion-label style="color: #fff;
@@ -17,28 +17,46 @@
   <ion-navbar>
       <ion-searchbar showCancelButton ="true" (ionInput)="getItems($event)"></ion-searchbar>
     </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content  style="background: #eee">
-    <div style="padding: 10px">
-        <ion-segment (ionChange)="durationChange(timeDuration)"  style="margin-top: 0.5rem" mode="ios" [(ngModel)]="timeDuration">
-          <ion-segment-button value="today">
-            Today
-          </ion-segment-button>
-          <ion-segment-button value="yesterday">
-            Yesterday
-          </ion-segment-button>
-          <ion-segment-button value="week">
-            Last Week
-          </ion-segment-button>
-          <ion-segment-button value="month">
-            Last month
-          </ion-segment-button>
-          <ion-segment-button value="date">
-            Date
-          </ion-segment-button>
-        </ion-segment>
-        </div>
+    <div   style="height: 190px;background-image: url('assets/imgs/bg.jpg');background-repeat: no-repeat;background-size:cover;">
+      <div  style="background-color: rgba(0, 0, 0, 0.3);    height: -webkit-fill-available;"> 
+        <ion-navbar>
+            <ion-item class="item-background-color">
+                <ion-label style="color: #fff;
+                  font-size: 17px;">Inventory</ion-label>
+                <ion-select interface="popover" [(ngModel)]="warehouseId" placeholder="Store">
+                  <ion-option *ngFor="let item of store" value="{{item.id}}">{{item.name}}</ion-option>
+                </ion-select>
+              </ion-item>
+          </ion-navbar>
+          <div style="padding: 8px">
+              <ion-segment (ionChange)="durationChange(timeDuration)"  style="margin-top: 0.5rem"  [(ngModel)]="timeDuration">
+                  <ion-segment-button value="today">
+                    Today
+                  </ion-segment-button>
+                  <ion-segment-button value="yesterday">
+                    Yesterday
+                  </ion-segment-button>
+                  <ion-segment-button value="week">
+                    Last Week
+                  </ion-segment-button>
+                  <ion-segment-button value="month">
+                    Last month
+                  </ion-segment-button>
+                  <ion-segment-button value="date">
+                    Date
+                  </ion-segment-button>
+                </ion-segment>
+                </div>
+
+                <ion-searchbar showCancelButton ="true" (ionInput)="getItems($event)"></ion-searchbar>
+
+    </div>
+    </div>
+    <div class="main-content" style="background: white;margin-top: -10px;border-top-left-radius: 15px;border-top-right-radius: 15px;height: -webkit-fill-available">
+        <div style="padding-top: 15px">
     <ion-grid>
         <ion-row *ngFor="let item of inventoryItemList">
           <ion-card style="border-radius: 5px;text-align: center;">
@@ -90,7 +108,8 @@
             </ion-card>
           </ion-row>
         </ion-grid>
-
+</div>
+</div>
 </ion-content>
 <ion-footer style="text-align: center">
   <p class="title" style=" font-size: 12px; width: 100%; margin-left: 0px; color: #34495E;">© 2018 Invoay Software All
