--- a/src/pages/lead/lead.html
+++ b/src/pages/lead/lead.html
@@ -4,35 +4,55 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title>lead</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
-    <div style="padding: 10px">
-        <ion-segment (ionChange)="durationChange(timeDuration)"  style="margin-top: 0.5rem" mode="ios" [(ngModel)]="timeDuration">
-          <ion-segment-button value="today">
-            Today
-          </ion-segment-button>
-          <ion-segment-button value="yesterday">
-            Yesterday
-          </ion-segment-button>
-          <ion-segment-button value="week">
-            Last Week
-          </ion-segment-button>
-          <ion-segment-button value="month">
-            Last month
-          </ion-segment-button>
-          <ion-segment-button value="date">
-            Date
-          </ion-segment-button>
-        </ion-segment>
-        </div>
+    <div   style="height: 190px;background-image: url('assets/imgs/bg.jpg');background-repeat: no-repeat;background-size:cover;">
+      <div  style="background-color: rgba(0, 0, 0, 0.3);    height: -webkit-fill-available;"> 
+        <ion-navbar>
+            <ion-item class="item-background-color">
+                <ion-label style="color: #fff;
+                  font-size: 17px;">lead</ion-label>
+                <ion-select interface="popover" [(ngModel)]="warehouseId" placeholder="Store">
+                  <ion-option *ngFor="let item of store" value="{{item.id}}">{{item.name}}</ion-option>
+                </ion-select>
+              </ion-item>
+          </ion-navbar>
+          <div style="padding: 8px">
+              <ion-segment (ionChange)="durationChange(timeDuration)"  style="margin-top: 0.5rem"  [(ngModel)]="timeDuration">
+                  <ion-segment-button value="today">
+                    Today
+                  </ion-segment-button>
+                  <ion-segment-button value="yesterday">
+                    Yesterday
+                  </ion-segment-button>
+                  <ion-segment-button value="week">
+                    Last Week
+                  </ion-segment-button>
+                  <ion-segment-button value="month">
+                    Last month
+                  </ion-segment-button>
+                  <ion-segment-button value="date">
+                    Date
+                  </ion-segment-button>
+                </ion-segment>
+                </div>
+
+                <ion-searchbar showCancelButton ="true" (ionInput)="getItems($event)"></ion-searchbar>
+
+    </div>
+    </div>
+    <div class="main-content" style="background: white;margin-top: -10px;border-top-left-radius: 15px;border-top-right-radius: 15px;height: -webkit-fill-available">
+        <div style="padding-top: 15px">
     <ion-fab right bottom>
         <button ion-fab mini (click)="addLead()">
           <ion-icon name="add"></ion-icon>
         </button>
       </ion-fab>
+      </div>
+      </div>
 </ion-content>
