--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,27 +1,61 @@
-<ion-content  padding>
-  <div style="text-align: center">
-    <img style="width: 80%;    margin-top: 2rem;" src="assets/imgs/invoay_icon.png">
-        <!-- <ion-item style="margin-top: 7rem;">
-            <ion-label position="floating">Username</ion-label>
-            <ion-input [(ngModel)]="username" type="text"></ion-input>
-          </ion-item> -->
-          <ion-item class="box">
-              <ion-label position="floating">Username</ion-label>
-              <ion-input [(ngModel)]="username" type="text"></ion-input>
-            </ion-item>
-          <ion-item class="box">
-            <ion-label position="floating">Password</ion-label>
-            <ion-input [(ngModel)]="password" type="password" ></ion-input>
-          </ion-item>
-          <div style="text-align: center">
-              <button ion-button class="login-button" full   (click)="login(username,password)">LOGIN</button>
-          </div>
-  
+<!-- 
+<ion-header>
+
+  <ion-navbar>
+    <ion-title>sign1</ion-title>
+  </ion-navbar>
+
+</ion-header> -->
+
+
+<ion-content  style=" background-image: url('assets/imgs/abc.jpg');background-repeat: no-repeat;background-size:cover;">
+  <div padding style="background-color: rgba(0, 0, 0, 0.6);    height: -webkit-fill-available;">
+  <div class="logoholder" text-center>
+    <img style="   width: 40%;" src="assets/imgs/pocket-icon.png" alt="">
+    <br>
+   <Span style="font-size: xx-large;color: #2196F3;" > <strong>PO</strong></Span><span style="font-size: xx-large;color: #ff538d;"><strong>CKET</strong></span>
+    <!-- <p style="color: white">Easily Keep track of your Buisness from any where with real-time sales numbers.</p> -->
   </div>
 
-</ion-content>
-<ion-footer style="text-align: center">
-  <p class="title" style=" font-size: 12px; width: 100%; margin-left: 0px; color: #34495E;">© 2018 Invoay Software All
-    Rights Reserved</p>
-  </ion-footer>
+    <div class="detailsholder" text-center>
+      <ion-row>
+        <ion-col style="background: #ff6a6a;font-size: 30px;padding-top: 15px;color: white" col-2>
+          <ion-icon name="person"></ion-icon>
+        </ion-col>
+        <ion-col style="background: #fff" col-10>
+            <ion-input  style="background:  rgba(0,0,0,0)" [(ngModel)]="username" class="username" placeholder="User name"></ion-input>
+        </ion-col>
+      </ion-row>
 
+      <ion-row style="margin-top: 15px">
+          <ion-col style="background: #ff6a6a;font-size: 30px;padding-top: 13px;color: white" col-2>
+            <ion-icon name="lock"></ion-icon>
+          </ion-col>
+          <ion-col style="background: #fff" col-10>
+              <ion-input  style="background:  rgba(0,0,0,0)"  [(ngModel)]="password"  type="password" placeholder="Password"></ion-input>  
+          </ion-col>
+        </ion-row>
+    
+   
+  </div>
+
+  <button class="loginbtn" ion-button (click)="login()"  full>Log In</button>
+<!-- <ion-row>
+    <ion-col col-6>
+        <button class="loginbtnFacebook" icon-only ion-button (click)="loginWithFacebook()"  full><ion-icon name="logo-facebook"></ion-icon></button>
+      </ion-col>
+      <ion-col col-6>
+        <button class="loginbtnGoogle" icon-only ion-button (click)="loginWithFacebook()"  full><ion-icon name="logo-google"></ion-icon></button>
+      </ion-col>
+</ion-row> -->
+
+
+  <!-- <div text-center> 
+    <p style="color:#fff">Forgot your password? </p>
+  </div>
+
+  <div class="dontholder" text-center>
+    <p>Don't you have an account? <span><a href="#">Sign up</a></span></p>
+  </div>-->
+  </div> 
+</ion-content>
